# website-teamkaif.ru

backend/: .gitignore  pyproject.toml
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
